fix: removido la extensión depreciada de WebSecurityConfigurerAdapter