@@ -10,8 +10,6 @@ import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.function.Function;
-import java.util.stream.Collectors;
-
 
 @Service
 public class JwtUtilService {
@@ -43,7 +41,7 @@ public class JwtUtilService {
     public String generateToken(UserDetails userDetails) {
         Map<String, Object> claims = new HashMap<>();
         // Agregando informacion adicional como "claim"
-        var rol = userDetails.getAuthorities().stream().collect(Collectors.toList()).get(0);
+        var rol = userDetails.getAuthorities().stream().toList().get(0);
         claims.put("rol", rol);
         return createToken(claims, userDetails.getUsername());
     }
